--- a/gradio_demo/requirements.txt
+++ b/gradio_demo/requirements.txt
@@ -1,16 +1,13 @@
-diffusers==0.25.0
-torch==2.0.0
-torchvision==0.15.1
-transformers==4.30.1
-xformers
+diffusers
+transformers
 accelerate
 safetensors
 einops
 onnxruntime-gpu
-spaces==0.19.4
+spaces
 omegaconf
 peft
-huggingface-hub==0.20.2
+huggingface-hub
 opencv-python
 insightface
 gradio
